<resources>
    <string name="app_name">Ejemplo04</string>
    <string name="margarita_barahona">Margarita Barahona</string>
    <string name="carreer_subtitle">Estudiante Ingenieria Informatica</string>
    <string name="message_hint">write your message</string>
    <string name="email_hint">write your email</string>
    <string name="message_text">Message</string>
    <string name="email_text">Email</string>
    <string name="contact_action">contact</string>
</resources>
